# utttbot

./: .gitignore  3ply.txt  CMakeLists.txt  Makefile  backup.sh  run.sh
results/: 2x2x2x2 utt winning strategy.txt  case2.py
src/: main.cpp
src/game/: game.cpp  game.h  perftexpected.txt
src/random/: random.cpp  random.h
src/solver/: solver.cpp  solver.h  tree.h
src/tests/: tests.cpp  tests.h
